# job_parser-proj

./: .gitignore  README.md  pyproject.toml  vacancies.json
src/: api.py  json_agent.py  json_saver.py  main.py  test.py  vacancy_agent.py
src/job_parser_proj/: api.py  json_agent.py  main.py  vacancy.py  vacancy_agent.py
src/scripts/: scripts.py
