[tool.poetry]
name = "job-parser-proj"
version = "0.1.0"
description = ""
authors = ["Pavel <pashapasha-2013@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.scripts]
test = "scripts.scripts:test"
load-vacancies-to-json = "scripts.scripts:load_vacancies_to_json"
show-vacancies-title = "scripts.scripts:show_vacancies_by_title"
delete-vacancy-by-title = "scripts.scripts:delete_vacancy_by_title"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
