[tool.poetry]
name = "job-parser-proj"
version = "0.1.0"
description = ""
authors = ["Pavel <pashapasha-2013@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.scripts]
load-vacancies-to-json = "scripts.scripts:load_vacancies_to_json"
show-vacancies-title = "scripts.scripts:show_vacancies_by_title"
delete-by-title = "scripts.scripts:delete_vacancy_by_title"
clear-json = "scripts.scripts:clear_json"
show-info-by-title = "scripts.scripts:show_info_by_title"
get-vacancies-by-kwards = "scripts.scripts:get_vacancies_by_kwards"
get-vacancies-by-salary = "scripts.scripts:get_vacancies_by_salary"
sort-vacancies-by-salary = "scripts.scripts:sort_vacancies_by_salary"
show-top-n = "scripts.scripts:show_top_n"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
